rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax11/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		default static void m() { 
			
		} 
	}
}